# MorphoParse

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example_output/: example_clean.phy  example_paup_weights.txt  example_raxml.models  example_remap.txt
examples/: b2015.txt  example.fasta  example.nexus  example.phy  example.tnt
morphoparse/: __main__.py  core.py  remap.py
morphoparse/writers/: __init__.py  nexus_writer.py  tnt_writer.py
src/morphoparse/: __init__.py  __main__.py  cli.py  core.py  file_utils.py  partition.py  poly.py  remap.py  utils.py  weight.py
src/morphoparse/parsers/: __init__.py  fasta_parser.py  nexus_parser.py  phylip_parser.py  tnt_parser.py
src/morphoparse/writers/: __init__.py  fasta_writer.py  nexus_writer.py  phylip_writer.py  tnt_writer.py
